--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": "true",
   "dependencies": {
+    "ioredis": "^4.27.3",
     "lerna": "^4.0.0"
   },
   "workspaces": [
@@ -14,7 +15,7 @@
   ],
   "scripts": {
     "booker": "lerna run Booker --stream --scope Booker",
-    "bookCreator": "lerna run BookCreator --stream --scope Booker",
+    "bookParser": "lerna run BookParser --stream --scope BookParser",
     "bootstrap": "lerna bootstrap",
     "lint": "eslint --ext .ts ."
   }
