--- a/Applications/BookParser/package.json
+++ b/Applications/BookParser/package.json
@@ -7,6 +7,21 @@
     "BookParser": "ts-node-dev --transpile-only -r tsconfig-paths/register --project ../../tsconfig.json -- ../../Applications/BookParser/index.ts"
   },
   "dependencies": {
-    "ramda": "^0.27.1"
+    "inversify": "^5.0.5",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
+    "ioredis": "^4.27.3",
+    "nconf": "^0.11.2",
+    "nconf-yaml": "^1.0.2",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
+    "ramda": "^0.27.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.2",
+    "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
+    "type-graphql": "^1.1.1",
+    "typescript": "^4.2.4"
   }
 }
