--- a/.github/workflows/booker-docker-publish.yml
+++ b/.github/workflows/booker-docker-publish.yml
@@ -32,7 +32,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile
+            docker build . --file ./Applications/Booker/Dockerfile
           fi
 
   # Push image to GitHub Packages.
@@ -52,7 +52,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file /home/runner/work/RadiusBook/Applications/Booker/Dockerfile --tag $IMAGE_NAME
+        run: docker build . --file ./Applications/Booker/Dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
