--- a/.github/workflows/booker-docker-publish.yml
+++ b/.github/workflows/booker-docker-publish.yml
@@ -55,7 +55,7 @@ jobs:
         run: docker build . --file ./Applications/Booker/Dockerfile --tag booker
         
       - name: Log in to Docker Hub
-        uses: docker/login-action@1
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
