--- a/.github/workflows/booker-docker-publish.yml
+++ b/.github/workflows/booker-docker-publish.yml
@@ -47,21 +47,29 @@ jobs:
     permissions:
       contents: read
       packages: write
-
+    
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Build image
-        run: docker build . --file ./Applications/Booker/Dockerfile --tag booker
-        
-      - name: Log in to Docker Hub
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Push to Docker Hub
+      -
+        name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Applications/Booker/Dockerfile
           push: true
           tags: atm028/booker:latest
+
