--- a/Applications/Booker/package.json
+++ b/Applications/Booker/package.json
@@ -25,6 +25,7 @@
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "type-graphql": "^1.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "uuidv4": "^6.2.8"
   }
 }
