--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.9"
 
 services:
   redis:
@@ -14,18 +14,26 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=booker
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
   booker:
     image: "dev_booker:latest"
     container_name: "booker"
     restart: always
+    environment:
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - REDIS_HOST=${REDIS_HOST}
+      - DEBUG_LEVEL=${DEBUG_LEVEL}
     ports:
       - 9090:9090
   book-parser:
     image: "dev_bookparser:latest"
     container_name: "booker-bookparser"
+    environment:
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - REDIS_HOST=${REDIS_HOST}
+      - DEBUG_LEVEL=${DEBUG_LEVEL}
     restart: always
     ports:
       - 9091:9091
