Bunyan logger added. Bunch of tests added.

--- a/Common/config/default.yaml
+++ b/Common/config/default.yaml
@@ -7,3 +7,7 @@ db:
   username:   "booker"
   password:   "booker"
   schema:     "booker"
+logger:
+  path: './'
+  level: 'info'
+  logtofile: 'true'
