--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "emitDecoratorMetadata": true,
     "noImplicitAny": false,
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "outDir": "bin",
     "baseUrl": "./",
     "paths": {
@@ -16,8 +17,13 @@
       "@common/*": ["Common/*"],
       "@infra/*": ["Infrastructure/*"],
       "@present/*": ["Presentation/*"],
-      "@persist/*": ["Persistence/*"]
-    }
+      "@persist/*": ["Persistence/*"],
+      "@tests/*": ["tests/*"]
+    },
+    "types": [
+      "jest",
+      "mocha"
+    ]
   },
   "exclude": [
     "node_modules"
